<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favorite"
        android:contentDescription="@string/favorite"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/watchlist"
        android:icon="@drawable/ic_baseline_bookmark_border_24"
        android:title="@string/watchlist"
        android:contentDescription="@string/watchlist"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        android:contentDescription="@string/share"
        app:showAsAction="ifRoom"
        />
</menu>