<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/txt_facts"
        style="@style/TitleText.Big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_ori_title"
        style="@style/TitleText.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/original_title"
        app:layout_constraintTop_toBottomOf="@id/txt_facts"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_ori_title_field"
        style="@style/DescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_ori_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/original_title"/>

    <TextView
        android:id="@+id/txt_release_date"
        style="@style/TitleText.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/release_date"
        app:layout_constraintTop_toBottomOf="@id/txt_ori_title_field"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_release_date_field"
        style="@style/DescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_release_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/original_title"/>


    <TextView
        android:id="@+id/txt_country_of_origin"
        style="@style/TitleText.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/country_of_origin"
        app:layout_constraintTop_toBottomOf="@id/txt_release_date_field"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_country_field"
        style="@style/DescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_country_of_origin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/original_title"/>

    <TextView
        android:id="@+id/txt_spoken_lang"
        style="@style/TitleText.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/language_spoken"
        app:layout_constraintTop_toBottomOf="@id/txt_country_field"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_spoken_lang_field"
        style="@style/DescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_spoken_lang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/original_title"/>


    <TextView
        android:id="@+id/txt_production_companies"
        style="@style/TitleText.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/production_companies"
        app:layout_constraintTop_toBottomOf="@id/txt_spoken_lang_field"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_company_field"
        style="@style/DescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_production_companies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/original_title"/>

    <TextView
        android:id="@+id/txt_budget"
        style="@style/TitleText.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/budget"
        app:layout_constraintTop_toBottomOf="@id/txt_company_field"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_budget_field"
        style="@style/DescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_budget"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/original_title"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/txt_revenue"
        style="@style/TitleText.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revenue"
        app:layout_constraintTop_toTopOf="@id/txt_budget"
        app:layout_constraintStart_toStartOf="@id/guideline"/>

    <TextView
        android:id="@+id/txt_revenue_field"
        style="@style/DescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_revenue"
        app:layout_constraintStart_toStartOf="@id/guideline"
        tools:text="@string/revenue"/>

</androidx.constraintlayout.widget.ConstraintLayout>