<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_item_main_movie_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:adjustViewBounds="true"
            android:transitionName="poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3"
            tools:src="@drawable/swgpro" />

        <TextView
            android:id="@+id/txt_title_item_main_movie_tv"
            style="@style/TitleText.2Line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_item_main_movie_tv"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/app_name"/>

        <TextView
            android:id="@+id/txt_subtitle_item_main_movie_tv"
            style="@style/SubtitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/txt_title_item_main_movie_tv"
            app:layout_constraintTop_toBottomOf="@id/txt_title_item_main_movie_tv"
            tools:text="@string/dummy_year" />

        <TextView
            android:id="@+id/txt_desc_item_main_movie_tv"
            style="@style/DescriptionText.4Line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/txt_title_item_main_movie_tv"
            app:layout_constraintTop_toBottomOf="@id/txt_subtitle_item_main_movie_tv"
            tools:text="@string/lorem_ipsum" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>